--- a/index.html
+++ b/index.html
@@ -167,6 +167,12 @@
   </style>
 </head>
 <body>
+  <script type="text/javascript">
+   var uid = '485308';
+   var wid = '732577';
+   var pop_tag = document.createElement('script');pop_tag.src='//cdn.popcash.net/show.js';document.body.appendChild(pop_tag);
+   pop_tag.onerror = function() {pop_tag = document.createElement('script');pop_tag.src='//cdn2.popcash.net/show.js';document.body.appendChild(pop_tag)};
+</script>
   <header class="header">
     <div class="logo">KrispCall</div>
     <nav>
